dinamically added the slug

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <input type="text" class="input-box" id="input-box" placeholder="Enter coin name...">
 		<input type="submit" value="Display data" id="btn-display-data">
-        <div class="data-display" id="dataDisplay">Data will be displayed here...</div>
+        <div class="data-display" id="dataDisplay"></div>
     </main>
     <script src="script.js"></script>
 </body>
